@@ -1,3 +1,10 @@
+Tue Oct 07 21:37:33 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBuddyList.cpp:
+	* gaim.pro:
+	  - Fixed a crash with chats in the buddy list.
+	  - Added the beginnings of the context-sensitive menu for chats.
+
 Tue Oct 07 21:11:16 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBListWindow.cpp:
